# VerityFoundry

./: .gitignore  AGENTS.md  CHANGELOG.md  CHATGPT.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  UNITY_AI.md  pyproject.toml  repository-metadata.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  decision_policy.yml  documentation.yml  example_request.yml  prompt_workflow.yml
.github/workflows/: ci.yml  release.yml
config/: release-quality-thresholds.json
docs/: action-version-policy.md  architecture.md  branching.md  ci-artifact-naming.md  ci.md  cross-workspace-dependency-fixture-compatibility.md  cross-workspace-fixture-graph-review-checklist.md  cross-workspace-reference-guidance.md  cross-workspace-reference-snapshots.md  decision-policy-lint.md  decision-provenance.md  example-fixture-diff-snapshots.md  executable-fixture-release-summary-coverage.md  executable-workspace-fixture-validation-design.md  fixture-inventory-report-schema.md  fixture-kind-pack-mapping.md  fixture-to-verityspec-checklist-examples.md  fixture-to-verityspec-checklist.md  generated-workspace-fixture-manifest-design.md  generated-workspace-fixture-provenance-schema.md  generated-workspace-fixture-readme-examples.md  generated-workspace-fixture-smoke-checks.md  generated-workspace-optional-verityspec-ci.md  generated-workspace-provenance-distribution-snapshots.md  generated-workspace-unresolved-decision-report.md  generated-workspace-validation-report-schema.md  generated-workspace-validation-result-ci-artifacts.md  generated-workspace-validation-result-cli-planning.md  generated-workspace-validation-result-drift-examples.md  generated-workspace-validation-result-package-data.md  generated-workspace-validation-result-schema.md  generated-workspace-validation-result-triage.md  generated-workspace-validation-result-update-dry-run.md  golden-output-drift-review.md  image-input-guidance.md  interview-modes.md  lifecycle-archival-drift-comparison.md  lifecycle-gap-to-verityspec.md  lifecycle-readiness-workflows.md  matrix-coverage.md  (+95 more)
evaluations/: golden-output-guidelines.md  prompt-quality-rubric.md  uncertainty-preservation-checklist.md
examples/portfolio/game-portfolio-triage/: manifest.json
examples/portfolio/shared-unity-dependency-map/: manifest.json
examples/product/customer-portal/: manifest.json
examples/software-library/shared-auth-library/: manifest.json
examples/unity-game/dream-extraction/: manifest.json
examples/unity-shared-library/shared-unity-runtime/: manifest.json
fixtures/generated-workspaces/customer-portal/: fixture-manifest.json  validation-result.json  verityspec.json
fixtures/generated-workspaces/dream-extraction/: fixture-manifest.json  validation-result.json  verityspec.json
fixtures/release-review/bundle/: manifest.example.json
fixtures/release-review/current/: golden-inventory.json  matrix-coverage.json  portfolio-coverage.json  provenance-distribution.json
goldens/lifecycle/customer-portal-archival-readiness/: manifest.json  (+1 more)
matrices/: lifecycle-matrix.md  portfolio-matrix.md  product-matrix.md  software-library-matrix.md  unity-game-matrix.md  unity-shared-library-matrix.md
prompts/common/: decision-policy.md  output-contract.md  provenance-rules.md  safety-and-uncertainty.md  verityspec-context.md
prompts/interviews/: interview-all.md  interview-high-stakes.md  interview-low-stakes.md  interview-medium-stakes.md  interview-none.md
prompts/targets/: archival-ready.md  concept-complete.md  decommission-ready.md  design-complete.md  implementation-ready.md  liveops-ready.md  maintenance-ready.md  operations-ready.md  production-ready.md  prototype-ready.md  vertical-slice-ready.md
schemas/: decision-policy.schema.json  example-manifest.schema.json  generated-workspace-fixture-provenance.schema.json  generated-workspace-validation-report.schema.json  generated-workspace-validation-result.schema.json  golden-output.schema.json  image-input-manifest.schema.json  matrix-manifest.schema.json  policy-lint-trend-report.schema.json  portfolio-coverage-report.schema.json  prompt-manifest.schema.json  provenance-distribution-report.schema.json  release-review-bundle-manifest.schema.json  release-summary-report.schema.json
snapshots/cross-workspace-references/: shared-unity-dependency-map-v0.22.0.json
snapshots/golden-output/: lifecycle-v0.19.0.json
snapshots/policy-lint/: v0.17.0.json
snapshots/prompt-quality/: v0.11.0.json
snapshots/release-summary/: v0.20.0.json  v0.21.0.json
snapshots/render-profiles/: unity-game-implementation-ready-chatgpt.md  unity-game-implementation-ready-claude-code.md  unity-game-implementation-ready-codex.md  unity-game-implementation-ready-default.md  unity-game-implementation-ready-gemini.md  unity-game-implementation-ready-github-copilot.md  unity-game-implementation-ready-unity-ai.md
src/verityfoundry/: __init__.py  __main__.py  cli.py  integration.py  inventory.py  manifests.py  matrix.py  matrix_coverage.py  policy_lint.py  policy_lint_trend.py  quality.py  quality_trend.py  release_integrity.py  release_summary.py  rendering.py  thresholds.py  validation.py  workflow_hygiene.py
tests/: test_cli.py  test_examples.py  test_generated_workspace_fixtures.py  test_generated_workspace_provenance_schema.py  test_generated_workspace_validation_report.py  test_generated_workspace_validation_results.py  test_golden_outputs.py  test_inventory_reports.py  test_manifest_roots.py  test_matrix_coverage_report.py  test_matrix_manifests.py  test_packaged_fixture_files.py  test_policy_lint.py  test_policy_lint_trend.py  test_prompt_manifests.py  test_quality_report.py  test_quality_trend.py  test_release_integrity.py  test_release_review_bundle_manifest.py  test_release_review_docs.py  test_release_review_fixtures.py  test_release_review_snapshots.py  test_release_summary.py  test_render_profiles.py  test_thresholds.py  test_verityspec_check.py  test_workflow_hygiene.py
(+100 files in other folders)
