[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verityfoundry"
version = "0.6.0"
description = "AI prompt workflows for fabricating, interviewing, and refining VeritySpec workspaces."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Jayson Furr" }
]
keywords = [
  "verityspec",
  "prompt-engineering",
  "ai-agents",
  "product-contracts",
  "workspace-generation",
  "unity",
  "game-development"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "jsonschema>=4.18"
]

[project.scripts]
verityfoundry = "verityfoundry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verityfoundry = ["py.typed"]
