[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verityfoundry"
version = "0.18.0"
description = "AI prompt workflows for fabricating, interviewing, and refining VeritySpec workspaces."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Jayson Furr" }
]
keywords = [
  "verityspec",
  "prompt-engineering",
  "ai-agents",
  "product-contracts",
  "workspace-generation",
  "unity",
  "game-development"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "jsonschema>=4.18"
]

[project.scripts]
verityfoundry = "verityfoundry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verityfoundry = ["py.typed"]

[tool.setuptools.data-files]
"share/verityfoundry/config" = ["config/*.json"]
"share/verityfoundry/schemas" = ["schemas/*.json"]
"share/verityfoundry/snapshots/prompt-quality" = ["snapshots/prompt-quality/*.json"]
"share/verityfoundry/snapshots/policy-lint" = ["snapshots/policy-lint/*.json"]
"share/verityfoundry/matrices" = ["matrices/*.md"]
"share/verityfoundry/prompts/common" = ["prompts/common/*.md"]
"share/verityfoundry/prompts/domains/lifecycle" = ["prompts/domains/lifecycle/*.md"]
"share/verityfoundry/prompts/domains/portfolio" = ["prompts/domains/portfolio/*.md"]
"share/verityfoundry/prompts/domains/product" = ["prompts/domains/product/*.md"]
"share/verityfoundry/prompts/domains/software-library" = ["prompts/domains/software-library/*.md"]
"share/verityfoundry/prompts/domains/unity-game" = ["prompts/domains/unity-game/*.md"]
"share/verityfoundry/prompts/domains/unity-shared-library" = ["prompts/domains/unity-shared-library/*.md"]
"share/verityfoundry/prompts/interviews" = ["prompts/interviews/*.md"]
"share/verityfoundry/prompts/targets" = ["prompts/targets/*.md"]
"share/verityfoundry/examples/portfolio/game-portfolio-triage" = ["examples/portfolio/game-portfolio-triage/*.json"]
"share/verityfoundry/examples/portfolio/game-portfolio-triage/expected" = ["examples/portfolio/game-portfolio-triage/expected/*.md", "examples/portfolio/game-portfolio-triage/expected/*.json"]
"share/verityfoundry/examples/portfolio/game-portfolio-triage/inputs" = ["examples/portfolio/game-portfolio-triage/inputs/*.md", "examples/portfolio/game-portfolio-triage/inputs/*.json"]
"share/verityfoundry/examples/portfolio/shared-unity-dependency-map" = ["examples/portfolio/shared-unity-dependency-map/*.json"]
"share/verityfoundry/examples/portfolio/shared-unity-dependency-map/expected" = ["examples/portfolio/shared-unity-dependency-map/expected/*.md", "examples/portfolio/shared-unity-dependency-map/expected/*.json"]
"share/verityfoundry/examples/portfolio/shared-unity-dependency-map/inputs" = ["examples/portfolio/shared-unity-dependency-map/inputs/*.md", "examples/portfolio/shared-unity-dependency-map/inputs/*.json"]
"share/verityfoundry/examples/product/customer-portal" = ["examples/product/customer-portal/*.json"]
"share/verityfoundry/examples/product/customer-portal/expected" = ["examples/product/customer-portal/expected/*.md", "examples/product/customer-portal/expected/*.json"]
"share/verityfoundry/examples/product/customer-portal/inputs" = ["examples/product/customer-portal/inputs/*.md", "examples/product/customer-portal/inputs/*.json"]
"share/verityfoundry/examples/software-library/shared-auth-library" = ["examples/software-library/shared-auth-library/*.json"]
"share/verityfoundry/examples/software-library/shared-auth-library/expected" = ["examples/software-library/shared-auth-library/expected/*.md", "examples/software-library/shared-auth-library/expected/*.json"]
"share/verityfoundry/examples/software-library/shared-auth-library/inputs" = ["examples/software-library/shared-auth-library/inputs/*.md", "examples/software-library/shared-auth-library/inputs/*.json"]
"share/verityfoundry/examples/unity-game/dream-extraction" = ["examples/unity-game/dream-extraction/*.json"]
"share/verityfoundry/examples/unity-game/dream-extraction/expected" = ["examples/unity-game/dream-extraction/expected/*.md", "examples/unity-game/dream-extraction/expected/*.json"]
"share/verityfoundry/examples/unity-game/dream-extraction/inputs" = ["examples/unity-game/dream-extraction/inputs/*.md", "examples/unity-game/dream-extraction/inputs/*.json"]
"share/verityfoundry/examples/unity-shared-library/shared-unity-runtime" = ["examples/unity-shared-library/shared-unity-runtime/*.json"]
"share/verityfoundry/examples/unity-shared-library/shared-unity-runtime/expected" = ["examples/unity-shared-library/shared-unity-runtime/expected/*.md", "examples/unity-shared-library/shared-unity-runtime/expected/*.json"]
"share/verityfoundry/examples/unity-shared-library/shared-unity-runtime/inputs" = ["examples/unity-shared-library/shared-unity-runtime/inputs/*.md", "examples/unity-shared-library/shared-unity-runtime/inputs/*.json"]
"share/verityfoundry/goldens/unity-game/dream-extraction-implementation-ready" = ["goldens/unity-game/dream-extraction-implementation-ready/*.json", "goldens/unity-game/dream-extraction-implementation-ready/*.md"]
"share/verityfoundry/goldens/unity-shared-library/shared-unity-runtime-implementation-ready" = ["goldens/unity-shared-library/shared-unity-runtime-implementation-ready/*.json", "goldens/unity-shared-library/shared-unity-runtime-implementation-ready/*.md"]
"share/verityfoundry/goldens/lifecycle/customer-portal-release-readiness" = ["goldens/lifecycle/customer-portal-release-readiness/*.json", "goldens/lifecycle/customer-portal-release-readiness/*.md"]
"share/verityfoundry/goldens/lifecycle/shared-auth-maintenance-readiness" = ["goldens/lifecycle/shared-auth-maintenance-readiness/*.json", "goldens/lifecycle/shared-auth-maintenance-readiness/*.md"]
"share/verityfoundry/goldens/lifecycle/shared-unity-runtime-decommission-readiness" = ["goldens/lifecycle/shared-unity-runtime-decommission-readiness/*.json", "goldens/lifecycle/shared-unity-runtime-decommission-readiness/*.md"]
